# gsatm

./: .CMakeLists.txt.swp  .CMakeLists.txt.un~  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  VALUUTA_VAHETUS.md  algorithm.c  algorithm.h  atm.c  atm.h  build_curl.bat  cash.info  colors.h  converter.c  converter.h  err_def.h  ex_rates.csv  ex_rates.info  fm.c  fm.h  gui_wrappers.c  gui_wrappers.h  hashmap.c  hashmap.h  lib_export.h  parse_csv.c  parse_csv.h  strparse.c  strparse.h  test.txt
.cache/clangd/index/: algorithm.c.99D0D3192B22CA95.idx  algorithm.h.0CE6154A336DDCB6.idx  converter.c.132EF99CA0E79AAD.idx  converter.h.BAD757C4D125A0EB.idx  err_def.h.FFBB5B0339691426.idx  fm.h.22D192F8C83196B9.idx  hashmap.h.7764D0C33FD4DBEE.idx  lib_export.h.979247D84333A9DA.idx
curl/: libcurl_a.lib
gui/: process_test.cs
